tests/unittests/compilefail_tests/regex_disabled.cpp
// Copyright 2017 Elias Kosunen
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This file is a part of scnlib:
//     https://github.com/eliaskosunen/scnlib

#define SCN_DISABLE_REGEX 1
#include <scn/scan.h>

int main()
{
    // build error: Regular expression support is disabled
    auto result = scn::scan<std::string>("42", SCN_STRING("{:/[a-z]+/}"));
    return result && result->value() == "42";
}
